// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`YoutubeVideo > matches snapshot in loading state 1`] = `
<section
  aria-label="Test Video"
  class="mt-4 flex w-full flex-col items-center"
>
  <div
    class="flex w-full max-w-3xl flex-col overflow-hidden rounded-3xl"
  >
    <div
      aria-live="polite"
      class="bg-black"
      role="region"
      style="aspect-ratio: 16 / 9;"
    >
      <div
        data-testid="youtube-iframe"
        data-video-id="test123"
      />
    </div>
    <div
      class="grid items-center border-coutline w-full rounded-b-3xl border grid-cols-3"
    >
      <span
        class="text-ctext-muted col-span-3 py-2 text-center"
      >
        Loading
      </span>
    </div>
  </div>
</section>
`;

exports[`YoutubeVideo > matches snapshot when playing 1`] = `
<section
  aria-label="Test Video"
  class="mt-4 flex w-full flex-col items-center"
>
  <div
    class="flex w-full max-w-3xl flex-col overflow-hidden rounded-3xl"
  >
    <div
      aria-live="polite"
      class="bg-black"
      role="region"
      style="aspect-ratio: 16 / 9;"
    >
      <div
        data-testid="youtube-iframe"
        data-video-id="test123"
      />
    </div>
    <div
      class="grid items-center border-coutline w-full rounded-b-3xl border grid-cols-3"
    >
      <button
        aria-label="Pause the video"
        class="cunderline text-ctext transition cfocus-visible chover-bg hover:bg-cbg hover:text-ctextdark focus-visible:outline-cfocus cursor-pointer rounded-bl-3xl py-2 text-center no-underline focus-visible:rounded-bl-3xl focus-visible:outline focus-visible:outline-1"
      >
        Pause
      </button>
      <button
        aria-label="Play the highlighted section"
        class="cunderline text-ctext transition cfocus-visible chover-bg hover:bg-cbg hover:text-ctextdark focus-visible:outline-cfocus cursor-pointer py-2 text-center no-underline focus-visible:outline focus-visible:outline-1"
      >
        Highlight
      </button>
      <button
        aria-label="Play at 0.5x speed"
        class="cunderline text-ctext transition cfocus-visible chover-bg hover:bg-cbg hover:text-ctextdark focus-visible:outline-cfocus cursor-pointer rounded-br-3xl py-2 text-center no-underline focus-visible:rounded-br-3xl focus-visible:outline focus-visible:outline-1"
      >
        Slower
      </button>
    </div>
  </div>
</section>
`;

exports[`YoutubeVideo > matches snapshot with all buttons visible 1`] = `
<section
  aria-label="Test Video"
  class="mt-4 flex w-full flex-col items-center"
>
  <div
    class="flex w-full max-w-3xl flex-col overflow-hidden rounded-3xl"
  >
    <div
      aria-live="polite"
      class="bg-black"
      role="region"
      style="aspect-ratio: 16 / 9;"
    >
      <div
        data-testid="youtube-iframe"
        data-video-id="test123"
      />
    </div>
    <div
      class="grid items-center border-coutline w-full rounded-b-3xl border grid-cols-3"
    >
      <button
        aria-label="Play the video"
        class="cunderline text-ctext transition cfocus-visible chover-bg hover:bg-cbg hover:text-ctextdark focus-visible:outline-cfocus cursor-pointer rounded-bl-3xl py-2 text-center no-underline focus-visible:rounded-bl-3xl focus-visible:outline focus-visible:outline-1"
      >
        Play
      </button>
      <button
        aria-label="Play the highlighted section"
        class="cunderline text-ctext transition cfocus-visible chover-bg hover:bg-cbg hover:text-ctextdark focus-visible:outline-cfocus cursor-pointer py-2 text-center no-underline focus-visible:outline focus-visible:outline-1"
      >
        Highlight
      </button>
      <button
        aria-label="Play at 0.5x speed"
        class="cunderline text-ctext transition cfocus-visible chover-bg hover:bg-cbg hover:text-ctextdark focus-visible:outline-cfocus cursor-pointer rounded-br-3xl py-2 text-center no-underline focus-visible:rounded-br-3xl focus-visible:outline focus-visible:outline-1"
      >
        Slower
      </button>
    </div>
  </div>
</section>
`;
